WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86768
[BlackBerry] Fix linking errors
https://bugs.webkit.org/show_bug.cgi?id=86768
Summary
[BlackBerry] Fix linking errors
Rob Buis
Reported
2012-05-17 12:46:37 PDT
We lack some methods in platform/blackberry.
Attachments
Patch
(2.23 KB, patch)
2012-05-17 12:50 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2012-05-17 12:50:38 PDT
Created
attachment 142534
[details]
Patch
WebKit Review Bot
Comment 2
2012-05-17 14:16:55 PDT
Comment on
attachment 142534
[details]
Patch Clearing flags on attachment: 142534 Committed
r117494
: <
http://trac.webkit.org/changeset/117494
>
WebKit Review Bot
Comment 3
2012-05-17 14:16:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug