[BlackBerry] Fix linking errors https://bugs.webkit.org/show_bug.cgi?id=86768

Reviewed by Antonio Gomes.

Add some missing stubs so we can link again.

* platform/blackberry/ContextMenuBlackBerry.cpp:
(WebCore::ContextMenu::itemCount):
(WebCore):
* platform/blackberry/PlatformScreenBlackBerry.cpp:
(WebCore::screenHorizontalDPI):
(WebCore):
(WebCore::screenVerticalDPI):


Canonical link: https://commits.webkit.org/104401@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117494 268f45cc-cd09-0410-ab3c-d52691b4dbfc